# app/Http/Requests/ProfileRequest.php
@@ -7,6 +7,8 @@ use App\Http\Controllers\Controller;
 use App\Http\Resources\ProfileResource;
 use App\Models\Profile;
 use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Support\Facades\Storage;
 use \Illuminate\Validation\ValidationException;
 
 class ProfileRequest extends FormRequest
@@ -50,6 +52,44 @@ class ProfileRequest extends FormRequest
             }
             $profile = Profile::create($validatedData + ['image' => $path, 'administrator_id' => $this->user()->id]);
             return app(Controller::class)->successResponse(['profile' => new ProfileResource($profile), 'message' => 'created successfully !'], 201);
+        } catch (\Exception $e) {
+            return app(Controller::class)->errorResponse(['message' => 'Internal server error'], 500);
+        }
+    }
+
+    public function updateOrDelete(Profile $profile): JsonResponse
+    {
+        $action = $this->input('action');
+
+        if ($action === 'delete') {
+            return $this->deleteProfile($profile);
+        }
+
+        return $this->updateProfile($profile);
+    }
+    private function updateProfile(Profile $profile): JsonResponse
+    {
+        try {
+            if ($this->hasFile('image')) {
+                Storage::disk('public')->delete($profile->image);
+                $profile->image = $this->file('image')->store('profiles', 'public');
+            }
+            
+            $profile->update($this->except('image'));
+            
+            return app(Controller::class)->successResponse(['message' => 'Profile updated successfully', 'profile' => new ProfileResource($profile)], 200);
+        } catch (\Exception $e) {
+            return app(Controller::class)->errorResponse(['message' => 'Internal server error'], 500);
+        }
+    }
+    
+    private function deleteProfile(Profile $profile): JsonResponse
+    {
+        try {
+            Storage::disk('public')->delete($profile->image);
+            $profile->delete();
+            
+            return app(Controller::class)->successResponse(['message' => 'Profile deleted successfully'], 200);
         } catch (\Exception $e) {
             return app(Controller::class)->errorResponse(['message' => 'Internal server error'], 500);
         }
